[package]
name = "xendit"
version = "0.0.1"
description = "Xendit Rust SDK"
authors = ["Hanjara Adhyatma"]
edition = "2021"
license = "MIT"
homepage = "https://x.com/papanberjalan"
repository = "https://github.com/mashanz/xendit-rust"
readme = "README.md"
keywords = ["xendit", "sdk"]
categories = ["xendit", "sdk"]

[dependencies]
